update style of index page, fix width on mobile
fix width on mobile, edit opacity on navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,7 @@ p {
 }
 .dropdown-item {
   text-align: right;
+  font-size: 15px;
   padding-left: .3rem;
   padding-top: .8rem;
   padding-bottom: .8rem;
@@ -319,7 +320,7 @@ h1.top {
 
   /* globe */
   .container-fluid-globe {
-    margin-top: -2rem;
+    margin-top: -6rem;
   }
 
   /* digitalcube.html */
@@ -376,6 +377,8 @@ h1.top {
   .nav-masthead .nav-link {
     font-size: 16px;
     letter-spacing: 9px;
+    opacity: .1;
+    border-radius: 12px;
   }
 
   /*navbar*/
@@ -387,5 +390,20 @@ h1.top {
     -ms-transition: color 0.4s ease-out;
     -moz-transition: color 0.4s ease-out;
     -webkit-transition: color 0.4s ease-out;
+  }
+
+  .container-fluid-timezone {
+    font-size: 9px;
+    letter-spacing: 9px;
+  }
+
+  html, body {
+    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
+  }
+  .modal {
+    width: 50vw;
+    height: 50vh;
+    height: calc(var(--vh, 1vh) * 50);
   }
 }
